--- a/index.html
+++ b/index.html
@@ -4,24 +4,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Pagina dedicada a la concientizacion de personas para ayudar a los osos polares"/>
+    <meta name="copyright" content="National Geographic España"/>
+    <link rel="shortcut icon" href="./img/favicon.png" type="image/x-icon">
 
     <!--Link FontAwsome-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous" />
 
     <!-- Link hoja de estilos -->
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="./styles/styles.css">
 
     <!-- Link GoogleFonts-->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Farro:wght@300;400;700&display=swap" rel="stylesheet">
 
-    <title>¡Salven a los osos Polares!</title>
+    <title>Osos polares en peligro de extincion</title>
 </head>
 <body>
     
     <section>
         <div class="img-vid">
-            <a href="#"><img src="./img/play.svg" alt="Play icon"></a>
+            <a href="#">
+                <img id="play-button" src="./img/play.svg" alt="Play icon">
+            </a>
         </div>
         <div>
             <h1 class="title-section">¡Osos polares en peligro de extincion!</h1>
@@ -34,11 +39,11 @@
 
     <div id="modal-container">
         <div id="modal">
-            <i class="fas fa-times"></i>
-            <iframe width="100%" height="100%" src="https://www.youtube.com/embed/cQ-jrVyd1vg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" controls allowfullscreen>
-            </iframe>
+            <i id="cruz-modal" class="fas fa-times"></i>
+            <iframe id="iframe" width="100%" height="100%" src="https://www.youtube.com/embed/cQ-jrVyd1vg" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" controls allowfullscreen></iframe>
         </div>
     </div>
 
+<script src="./javascript/script-modal.js"></script>
 </body>
 </html>
